# interview_theme

./: .env.example  .gitignore  DATA_NOTES.md  Dockerfile  INTERVIEW_EXPLANATION.md  README.md  RUN.md  docker-compose.yml  mcp-config.json  pyproject.toml
.github/workflows/: ci.yml
data/fixtures/: news.json  prices.json  resources.json
src/mineral_daily_agent/: __init__.py  agent.py  cli.py  config.py  fixtures.py  llm.py  mcp_client.py  schemas.py
src/mineral_daily_agent/servers/: lme_price.py  mineral_pdf.py  mining_news.py
tests/: test_agent.py  test_fixtures.py  test_mcp_client.py  test_mcp_tools.py
